# EvolutionSimulator

./: .gitignore  CMakeLists.txt  Doxyfile  Filip_Rupchin.md  README.md  settings.json
.github/: CODEOWNERS
.github/workflows/: cmake-multi-platform.yml
Designs/: 901843-200-20240111-212830.piskel  Config-20240116-091742.piskel  Creature_base.piskel  Creature_eyes-20240131-013601.piskel  Creature_eyes.piskel  Creature_tails-20240131-014104.piskel  Creature_tails.piskel  Food_32x32 hue 0.piskel  Food_32x32.piskel  Logos botones.psd  Pheromone.piskel  Restart.piskel  Run-20240116-093420.piskel  Start.piskel  Stomach.piskel  down.piskel  final_egg.piskel
Engine/: CMakeLists.txt  neat-test
Engine/include/: alive_entity.h  cluster.h  collision_functions.h  collision_manager.h  collisions.h  config.h  creature.h  creature_manager.h  data_accessor.h  digestive_system.h  egg.h  engine.h  entity 2.h  entity.h  entity_grid.h  environment.h  food.h  food_manager.h  food_processor.h  geometry_primitives.h  grabbing_entity.h  mathlib.h  movable_entity 2.h  movable_entity.h  mutable.h  omp.h  pheromone.h  pheromones_system.h  random.h  reproduction.h  reproductive_system.h  settings.h  simulation.h  simulation_data.h  simulationdata.h  vision_system.h
Engine/include/core/: collision_functions.h  data_accessor.h  engine.h  geometry_primitives.h  random.h  settings.h  synchronization_primitives.h
Engine/include/entities/: creature.h  entity.h  food.h  movable_entity.h  mutable.h
Engine/include/entity/: alive_entity.h  entity.h  food.h  grabbing_entity.h  movable_entity.h
Engine/include/entity/creature/: creature.h  digestive_system.h  egg.h  mutable.h  pheromone.h  pheromones_system.h  reproduction.h  vision_system.h
Engine/include/neat/: brain_module.h  genome.h  link.h  neat-genome.h  neat-link.h  neat-neural-network.h  neat-neuron.h  neat-test.h  neural_network.h  neuron.h
Engine/include/simulation/: collision_manager.h  creature_manager.h  entity_grid.h  environment.h  food_manager.h  simulation.h  simulation_data.h
Engine/src/: alive_entity.cpp  cluster.cpp  collision_functions.cpp  collision_manager.cpp  collisions 2.cpp  collisions.cpp  creature.cpp  creature_manager.cpp  digestive_system.cpp  egg.cpp  engine.cpp  entity.cpp  entity_grid.cpp  environment.cpp  food.cpp  food_manager.cpp  food_processor.cpp  geometry_primitives.cpp  grabbing_entity.cpp  main.cpp  mathlib.cpp  movable_entity 2.cpp  movable_entity.cpp  mutable.cpp  pheromone.cpp  pheromones_system.cpp  random.cpp  reproduction.cpp  reproductive_system.cpp  settings.cpp  simulation.cpp  simulation_REMOTE_65110.cpp  simulation_data.cpp  simulationdata.cpp  vision_system.cpp
Engine/src/core/: collision_functions.cpp  engine.cpp  geometry_primitives.cpp  mathlib.cpp  random.cpp  settings.cpp
Engine/src/entities/: creature.cpp  entity.cpp  food.cpp  movable_entity.cpp  mutable.cpp
Engine/src/entity/: alive_entity.cpp  entity.cpp  food.cpp  grabbing_entity.cpp  movable_entity.cpp
Engine/src/entity/creature/: creature.cpp  digestive_system.cpp  egg.cpp  mutable.cpp  pheromone.cpp  pheromones_system.cpp  reproduction.cpp  vision_system.cpp
Engine/src/neat/: brain_module.cpp  genome.cpp  link.cpp  neat-genome.cpp  neat-link.cpp  neat-neural-network.cpp  neat-neuron.cpp  neat-test.cpp  neural_network.cpp  neuron.cpp
Engine/src/simulation/: collision_manager.cpp  creature_manager.cpp  entity_grid.cpp  environment.cpp  food_manager.cpp  simulation.cpp  simulation_data.cpp
Engine/tests/: CMakeLists.txt  collisions.cpp  creature 2.cpp  creature.cpp  movement.cpp  neat.cpp  reproduction.cpp
Reporting/: angela.garcinuno-feliciano.md  berra.dogan.md  carlos.lopez-villanueva.md  daniela.cojocaru.md  erik.felvinczi.md  filip.rupchin.md  gianluca.oberreit.md  ioana.popescu.md  magda.schyberg.md  nikola.dobricic.md
UI/: CMakeLists.txt  mainwindow.cpp  qrc_resource_file 2.qrc  qrc_resource_file.qrc  simulationcanvas.cpp  simulationcanvas.h
UI/Shaders/: colorShift.frag  densityShader.frag  stomachShader.frag
UI/include/: creaturetracker.h  custombutton.h  font_data 2.h  mainwindow.h  qsfmlcanvas.h  simulationcanvas.h
UI/include/mainwindow/: cluster.h  config_manager.h  graph_manager.h  mainwindow.h
UI/include/simulationcanvas/: info_panel.h  simulationcanvas.h  texture_manager.h
UI/src/: creaturetracker.cpp  custombutton.cpp  main-ui.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  qsfmlcanvas.cpp  simulationcanvas.cpp
UI/src/mainwindow/: cluster.cpp  config_manager.cpp  graph_manager.cpp  mainwindow.cpp  mainwindow.ui
UI/src/qwidgets/: qsfmlcanvas.cpp
UI/src/simulationcanvas/: info_panel.cpp  simulationcanvas.cpp  texture_manager.cpp
reports/: Ioana_Popescu_Week1.md  Milan_Stankovic_report
